fixed hero pattern visibility

--- a/components/TextualArticle/TextualArticle.module.scss
+++ b/components/TextualArticle/TextualArticle.module.scss
@@ -40,6 +40,14 @@
     }
   }
 
+  & a {
+    color: var(--color-peach);
+
+    &:hover {
+      text-decoration: underline;
+    }
+  }
+
   & p {
     @include fonts.small-body;
     color: var(--color-dark-grey);
